fix: wrong font-weight, border for header

--- a/complex/complex.css
+++ b/complex/complex.css
@@ -16,6 +16,7 @@
 /** HEADER **/
 .header {
   background-color: white;
+  border-bottom: solid 1px #eaebf0;
 }
 
 .header-wrapper {
@@ -34,7 +35,7 @@
 
 .header-navigation {
   display: block;
-  padding-top: 1.5rem;
+  padding-top: 1.4375rem;
 }
 
 .header-link {
@@ -64,6 +65,7 @@
   margin-bottom: .5rem;
   font-family: 'Philosopher', sans-serif;
   font-size: 32px;
+  font-weight: 700;
   font-weight: bold;
   line-height: 36px;
   color: #3e4247;
@@ -80,7 +82,7 @@
 }
 
 .building-favorite-button {
-  padding: .5rem 1rem;
+  padding: 7px 15px;
   margin-top: 24px;
   align-self: flex-start;
   border-radius: 2px;
@@ -89,6 +91,7 @@
 }
 
 .building-favorite-button-text {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: 'Fira Sans', sans-serif;
@@ -141,7 +144,7 @@
   margin-bottom: 0.625rem;
   font-family: Philosopher, sans-serif;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 27px;
   color: #3e4247;
 }
@@ -167,7 +170,7 @@
   margin-bottom: 1.125rem;
   font-family: Philosopher, sans-serif;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 27px;
   color: #3e4247;
 }
@@ -207,7 +210,7 @@
   margin: 0;
   font-family: Philosopher, sans-serif;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 27px;
   color: #3e4247;
 }
@@ -232,7 +235,7 @@
   margin-bottom: 1rem;
   font-family: Philosopher, sans-serif;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 27px;
   color: #3e4247;
 }
@@ -261,7 +264,7 @@
   margin-bottom: 1.5rem;
   font-family: Philosopher, sans-serif;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 27px;
   color: #3e4247;
 }
@@ -271,7 +274,7 @@
   margin-bottom: 1.5rem;
   font-family: Philosopher, sans-serif;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 22px;
   color: #3e4247;
 }
@@ -362,7 +365,7 @@
   margin-bottom: 3rem;
   font-family: Philosopher, sans-serif;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 27px;
   color: #a9afb6;
 }
@@ -372,7 +375,7 @@
   margin-bottom: 3rem;
   font-family: Philosopher, sans-serif;
   font-size: 48px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 60px;
   color: #ffffff;
 }
